# mpato

./: README.md  pyproject.toml  setup.py  test_discovery.py  test_mcp_shim.py  test_mpato.py
mpato/: __init__.py  discovery.py  dispatcher.py  loader.py  result.py
mpato/auth/: injector.py  oauth2.py  resolver.py
mpato/protocols/: rest.py  wss.py
mpato/shims/: mcp.py
registry/: github.yaml  mpato-index.json  openmeteo.yaml
